Adjusted Navbar To Stop Covering Content

--- a/fourYearPlanner/templates/format.css
+++ b/fourYearPlanner/templates/format.css
@@ -1,4 +1,1 @@
-body {background-color:red;}
-p{font-family:"Calibri";
-  font-size:20px;
-  color:white;}
+.margin {margin-top:41px;}
